crates/science-parser/tests/snapshots/parse_closure_types__a_bound_that_opens_with_a_paren_needs_an_arrow.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "parse_source_allowing_errors(r#\"def run[F](f: F) -> Int where F: (Int):\n    0\n\"#)"
---
Module @0..46
  Fn `run` @0..45
    generics
      TypeParam `F` @8..9
    params
      Param `f` @11..15
        type: Path `F` @14..15
    ret: Path `Int` @20..23
    where
      Predicate @30..38
        type: Path `F` @30..31
        bounds
          ClosureBound @33..38
            params
              Path `Int` @34..37
            ret: Error @34..37
    body: Block @44..45
      tail: Int 0 @44..45
--- diagnostics ---
SC0119 @34..37 expected `->` after a closure type's parameter list, found `:`
  note `collections-and-chains.md` §1.2 spells a closure type `(A) -> B`; a bound that opens with `(` has no other reading, so the arrow is not optional here
