crates/science-parser/tests/snapshots/parse_closure_types__a_closure_bound_in_a_list_with_interface_bounds.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 194
expression: "parse_source(r#\"def run of F(f: F) -> Int where F: Clone + (Int) -> Bool + Send:\n    0\n\"#)"
---
Module @0..71
  Fn `run` @0..70
    generics
      TypeParam `F` @11..12
    params
      Param `f` @13..17
        type: Path `F` @16..17
    ret: Path `Int` @22..25
    where
      Predicate @32..63
        type: Path `F` @32..33
        bounds
          Bound `Clone` @35..40
          ClosureBound @43..56
            params
              Path `Int` @44..47
            ret: Path `Bool` @52..56
          Bound `Send` @59..63
    body: Block @69..70
      tail: Int 0 @69..70
--- diagnostics ---
(none)
