crates/science-parser/tests/snapshots/parse_closure_types__a_closure_in_a_where_bound.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "parse_source(r#\"def keep[P](items: Array[Int], p: P) -> Array[Int] where P: (&Int) -> Bool:\n    items\n\"#)"
---
Module @0..86
  Fn `keep` @0..85
    generics
      TypeParam `P` @9..10
    params
      Param `items` @12..29
        type: Path `Array` @19..29
          generics of `Array`
            Path `Int` @25..28
      Param `p` @31..35
        type: Path `P` @34..35
    ret: Path `Array` @40..50
      generics of `Array`
        Path `Int` @46..49
    where
      Predicate @57..74
        type: Path `P` @57..58
        bounds
          ClosureBound @60..74
            params
              Borrowed @61..65
                Path `Int` @62..65
            ret: Path `Bool` @70..74
    body: Block @80..85
      tail: Path `items` @80..85
--- diagnostics ---
(none)
