crates/science-parser/tests/snapshots/parse_closure_types__a_closure_over_a_single_tuple_cannot_be_spelled.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 278
expression: collapsed
---
Closure
  params
    Path `Int`
    Path `Bool`
  ret: Path `Int`
