crates/science-parser/tests/snapshots/parse_closure_types__a_closure_with_no_parameters.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "shape_of_type(\"() -> Bool\")"
---
Closure
  ret: Path `Bool`
