crates/science-parser/tests/snapshots/parse_closure_types__a_fallible_return_shape_is_still_a_tuple.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 221
expression: "parse_source(r#\"def load(path: String) -> (Config, Error?):\n    0\n\ndef load_as of T(path: String) -> (T, Error?) where T: Clone:\n    0\n\"#)"
---
Module @0..119
  Fn `load` @0..49
    params
      Param `path` @9..21
        type: Path `String` @15..21
    ret: Tuple @26..42
      Path `Config` @27..33
      Nullable @35..41
        Path `Error` @35..40
    body: Block @48..49
      tail: Int 0 @48..49
  Fn `load_as` @51..118
    generics
      TypeParam `T` @66..67
    params
      Param `path` @68..80
        type: Path `String` @74..80
    ret: Tuple @85..96
      Path `T` @86..87
      Nullable @89..95
        Path `Error` @89..94
    where
      Predicate @103..111
        type: Path `T` @103..104
        bounds
          Bound `Clone` @106..111
    body: Block @117..118
      tail: Int 0 @117..118
--- diagnostics ---
(none)
