crates/science-parser/tests/snapshots/parse_closure_types__a_nullable_closure_needs_its_own_parentheses.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "shape_of_type(\"((Int) -> Bool)?\")"
---
Nullable
  Closure
    params
      Path `Int`
    ret: Path `Bool`
