crates/science-parser/tests/snapshots/parse_closure_types__a_one_parameter_closure.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
expression: "shape_of_type(\"(Int) -> Bool\")"
---
Closure
  params
    Path `Int`
  ret: Path `Bool`
