crates/science-parser/tests/snapshots/parse_closure_types__a_parenthesised_type_is_still_not_a_tuple.snap
---
source: crates/science-parser/tests/parse_closure_types.rs
assertion_line: 38
expression: "shape_of_type(\"(Int)\")"
---
Path `Int`
